add_subdirectory(Player)
add_subdirectory(Game)
add_subdirectory(Surface)
add_subdirectory(Gui)
add_subdirectory(Item)
add_subdirectory(World)
add_subdirectory(Texture)
add_subdirectory(Font)
add_subdirectory(Utilities)
add_subdirectory(Anim)
add_subdirectory(Thread)
add_subdirectory(Text)
add_subdirectory(Sprite)
add_subdirectory(Stats)
